--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -1,4 +1,4 @@
-name: Build SM-M556B (Native Clang + Bypass)
+name: Build SM-M556B (Native Clang + Fixes)
 
 on:
   workflow_dispatch:
@@ -10,10 +10,11 @@ jobs:
     env:
       BUILD_TARGET: m55xq_swa_open
       CHIPSET_NAME: x55
+      # Evita perguntas interativas durante a instalação
       DEBIAN_FRONTEND: noninteractive
 
     steps:
-    # 1️⃣ LIMPEZA DE DISCO
+    # 1️⃣ LIMPEZA DE DISCO (Libera ~30GB para o Build)
     - name: Free Disk Space
       uses: jlumbroso/free-disk-space@main
       with:
@@ -25,30 +26,32 @@ jobs:
         docker-images: true
         swap-storage: true
 
-    # 2️⃣ Checkout SEM LFS
+    # 2️⃣ Checkout SEM LFS (Crucial para não estourar sua cota)
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
         lfs: false
         fetch-depth: 1
 
-    # 3️⃣ SWAP
+    # 3️⃣ SWAP (8GB para aguentar o Link final)
     - name: Setup Swap (8GB)
       run: |
+        echo "🔧 Criando Swap..."
         sudo fallocate -l 8G /swapfile
         sudo chmod 600 /swapfile
         sudo mkswap /swapfile
         sudo swapon /swapfile
         free -h
 
-    # 4️⃣ Dependências (Adicionado clang e lld explicitamente)
+    # 4️⃣ Dependências + CLANG/LLVM Nativos
     - name: Install build dependencies
       run: |
         sudo apt update
         sudo apt install -y \
           bc bison build-essential cpio flex git \
           libncurses-dev libssl-dev python3 \
-          unzip wget rsync dwarves lld clang llvm
+          unzip wget rsync dwarves \
+          clang llvm lld
 
     # 5️⃣ Export variáveis Samsung
     - name: Export Samsung build variables
@@ -60,7 +63,7 @@ jobs:
         echo "TARGET_BOARD_PLATFORM=gki" >> $GITHUB_ENV
         echo "IS_KBUILD=true" >> $GITHUB_ENV
 
-    # 6️⃣ Detectar estrutura real do kernel
+    # 6️⃣ Detectar estrutura do kernel
     - name: Detect kernel structure
       run: |
         if [ -d "Kernel/kernel_platform/build/android" ]; then
@@ -68,48 +71,53 @@ jobs:
         elif [ -d "kernel_platform/build/android" ]; then
           echo "KERNEL_PATH=kernel_platform" >> $GITHUB_ENV
         else
-          echo "❌ Estrutura não encontrada"
+          echo "❌ Estrutura não encontrada!"
           exit 1
         fi
 
-    # 7️⃣ Build kernel (Usando Clang do Sistema)
+    # 7️⃣ Build kernel (Bypass Total: ABI, CFI, LFS e Config)
     - name: Build Samsung GKI kernel
       run: |
         cd $KERNEL_PATH
         
-        echo "🧹 Limpando travas de ABI e Config..."
+        echo "🧹 Limpando travas de ABI e Configuração..."
         find . -name "abi_symbollist*" -delete
+        # Remove obrigatoriedade de LTO e CFI dos configs
         find msm-kernel/arch/arm64/configs/ -name "*" -exec sed -i '/CONFIG_CFI_CLANG/d' {} +
         find msm-kernel/arch/arm64/configs/ -name "*" -exec sed -i '/CONFIG_LTO_CLANG/d' {} +
         
         chmod +x build/android/prepare_vendor.sh
         
-        echo "🚀 Iniciando compilação com Clang nativo..."
-        # Forçamos o uso do Clang instalado no /usr/bin
+        echo "🚀 Iniciando compilação com Clang Nativo (/usr/bin)..."
+        
+        # Variáveis MÁGICAS para usar o compilador do sistema e ignorar erros
         RECOMPILE_KERNEL=1 \
         SKIP_ABI_CHECKS=1 \
         SKIP_CP_METADATA=1 \
         SKIP_CONF_CHECK=1 \
         KMI_SYMBOL_LIST_STRICT_MODE=0 \
         GKI_ABI_CHECK=0 \
-        CLANG_PREBUILT_BIN=true \
+        CLANG_PREBUILT_BIN=/usr/bin \
         REAL_CLANG_PATH=/usr/bin \
         build/android/prepare_vendor.sh $CHIPSET_NAME gki gki
 
-    # 8️⃣ Empacotar
+    # 8️⃣ Empacotar resultados
     - name: Package kernel output
       run: |
         mkdir -p artifacts
         DIST_DIR=$(find . -type d -name "dist" | grep "out" | head -n 1)
         
         if [ -n "$DIST_DIR" ]; then
+            echo "✅ Build finalizado! Copiando arquivos..."
             cp -r $DIST_DIR/* artifacts/
         else
+            echo "⚠️ Pasta dist não encontrada, tentando resgate manual..."
             find . -name "Image" -exec cp {} artifacts/ \;
             find . -name "Image.lz4" -exec cp {} artifacts/ \;
             find . -name "*.dtb" -exec cp {} artifacts/ \;
             find . -name "dtbo.img" -exec cp {} artifacts/ \;
-            find . -name "*.ko" -exec cp {} artifacts/ \;
+            # Copia módulos essenciais se existirem
+            find . -name "*.ko" -exec cp {} artifacts/ \; || true
         fi
         zip -r SM-M556B_kernel_build.zip artifacts
 
